--- a/index.html
+++ b/index.html
@@ -37,8 +37,33 @@
                 </div>
         </div>
 </section>
+<section class="container p-5 text-center">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-uppercase">Sfida il computer, lancia il dado!</h2>
+                    </div>
+                    <div class="col-12">
+                        <h3 class="mb-5">Click sul bottone per lanciare il dado </h3>
+                        <button id="my-dice-btn" class="btn btn-dark mb-5"> Lancia il dado!</button>
+                    </div>
+                    <div class="col-6">
+                        <h5> Tu hai lanciato:</h5>
+                        <p id="user-dice"> </p>
+                    </div>
+                    <div class="col-6">
+                        <h5> Il computer ha lanciato:</h5>
+                        <p id="computer-dice"> </p>
+                    </div>
+                    <div class="col-12">
+                        <h2 id="winner"> </h2>
+
+                    </div>
+                </div>
+
+            </section>
 
 
         <script type="text/javascript" src="js/myscript.js"></script>
     </body>
 </html>
+
